Bug 696248. Flush pending onscroll events before painting. r=mats